correction section réalignement vidéo

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ h1 {
 
 
 /*en tête & pied de page*/
+header {
+  bottom: 50px;
+}
+
 nav {
   width: 100%;
   margin: 0 auto;
@@ -156,24 +160,32 @@ section {
   justify-content: center;
   width: 100%;
   padding-bottom: 20px;
-  margin: auto auto;
-  box-shadow: 0px 0px 10px #a02727;
+  margin: 20px auto;
+  box-shadow: 0px 0px 10px #bbbbbb;
   background-color: #ffffff;
   border-radius: 60px/60px;
 }
 
+section h2 {
+  margin: 20px 0;
+  width: 90%;
+}
+
+h2 {
+  text-decoration: underline;
+}
+
 section>div {
-  width: 100%;
+  width: 90%;
 }
 
 .videoformat {
+  display: flex;
   justify-content: center;
-  border-radius: 20px;
-  box-shadow: 0px 0px 10px #a02727;
-  width: 720px;
-  height: 500px;
-  box-sizing: border-box;
-  margin: auto auto;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+  margin-top: 1%;
 }
 
 
